--- a/src/public/css/confirm.css
+++ b/src/public/css/confirm.css
@@ -1,18 +1,15 @@
-.header {
-    background: #000;
-}
-
-.header__inner {
-    margin: 0 auto;
-    padding: 20px 15px;
-    max-width: 1230px;
+header {
+    text-decoration: underline;
 }
 
 .header__logo {
-    color: #fff;
-    text-decoration: none;
+    color: rgb(175, 104, 104);
     font-weight: bold;
     font-size: 24px;
+}
+
+h2 {
+    color: rgb(175, 104, 104);
 }
 
 .confirm__content {
