--- a/src/public/css/thanks.css
+++ b/src/public/css/thanks.css
@@ -1,27 +1,16 @@
-.header {
-    background: #000;
-}
-
-.header__inner {
-    margin: 0 auto;
-    padding: 20px 15px;
-    max-width: 1230px;
-}
-
-.header__logo {
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 24px;
-}
-
 .thanks__content {
     margin: 0 auto;
     padding: 30px 15px;
     max-width: 1230px;
 }
 
+h2 {
+    color: rgb(175, 104, 104);
+}
+
 .thanks__heading {
     margin-bottom: 40px;
     text-align: center;
+    background-color: rgb(175, 104, 104);
+    color: white;
 }
